--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -8,6 +8,8 @@
     <%= render 'pick_em_draft' %>
   <% when 'special' %>
     <%= render 'special_draft' %>
+  <% when 'bracket' %>
+    <%= render 'bracket' %>
   <% end %>
 </div>
 <script>
