--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -14,6 +14,9 @@
       <% when 'special' %>
         <%= render 'special_info' %>
         <%= render 'special' %>
+      <% when 'bracket' %>
+        <%= render 'bracket_info' %>
+        <%= render 'bracket' %>
       <% end %>
     </div>
   </div>
