--- a/app/views/drafts/_bracket.html.erb
+++ b/app/views/drafts/_bracket.html.erb
@@ -1,4 +1,4 @@
-<div id="draft-progress-container">
+<div id="draft-progress-container" style="background: #191919;">
   <div class="page-title">
     <p class="page-instructions intro">
       Welcome to your bracket for
