--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -56,11 +56,24 @@
           <% @matches.select{ |match| match.round == 1 && match.group == '1' }.each do |match| %>
             <% character_a = Character.find_by_id(match.player_a_id) %>
             <% character_b = Character.find_by_id(match.player_b_id) %>
+
+            <% character_a_asset_name = character_a ? character_a.name.parameterize : nil %>
+            <% character_b_asset_name = character_b ? character_b.name.parameterize : nil %>
+
+            <% pick = @picks.find_by(pickable_id: match.id) %>
+
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top winner"><%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %></div>
-            <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom "><%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %></div>
+            <div class="game game-top <%= 'winner' if pick.winner_id == character_a.id %>">
+              <%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %>
+              <%= image_tag "spark-madness/#{character_a_asset_name}.jpg" %>
+            </div>
+            <div class="game game-spacer">&nbsp;
+            </div>
+            <div class="game game-bottom <%= 'winner' if pick.winner_id == character_b.id %>">
+              <%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %>
+              <%= image_tag "spark-madness/#{character_b_asset_name}.jpg" %>
+            </div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -194,11 +207,24 @@
           <% @matches.select{ |match| match.round == 1 && match.group == '2' }.each do |match| %>
             <% character_a = Character.find_by_id(match.player_a_id) %>
             <% character_b = Character.find_by_id(match.player_b_id) %>
+
+            <% character_a_asset_name = character_a ? character_a.name.parameterize : nil %>
+            <% character_b_asset_name = character_b ? character_b.name.parameterize : nil %>
+
+            <% pick = @picks.find_by(pickable_id: match.id) %>
+
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top winner"><%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %></div>
-            <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom "><%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %></div>
+            <div class="game game-top <%= 'winner' if pick.winner_id == character_a.id %>">
+              <%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %>
+              <%= image_tag "spark-madness/#{character_a_asset_name}.jpg" %>
+            </div>
+            <div class="game game-spacer">&nbsp;
+            </div>
+            <div class="game game-bottom <%= 'winner' if pick.winner_id == character_b.id %>">
+              <%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %>
+              <%= image_tag "spark-madness/#{character_b_asset_name}.jpg" %>
+            </div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
