--- a/app/views/seasons/leagues/index.html.erb
+++ b/app/views/seasons/leagues/index.html.erb
@@ -256,6 +256,10 @@
       <p>
         Rather than drafting players or cards, you pick the winner of a given match. The player who picks the most winners, well, wins!
       </p>
+      <h5>Bracket</h5>
+        <p>
+          A bracket league allows you to pick the winners of every match in a single-elimination tournament, all the way to the finals!
+        </p>
     </div>
   </div>
   <div id="submit-message" class="submit-message submit-message-absolute alert-ready-to-submit alert-fixed">
