--- a/app/views/admin/competition_players/new.html.erb
+++ b/app/views/admin/competition_players/new.html.erb
@@ -15,6 +15,10 @@
           <%= label_tag :bracket, nil, class: 'control-label' %>
           <%= select_tag :bracket, options_for_select([['True', 'true'], ['False', 'false']]), include_blank: 'Is this a bracket competition?', required: true, class: 'form-control' %>
         </div>
+        <div class="form-group required">
+          <%= label_tag :name_in_one_column, nil, class: 'control-label' %>
+          <%= select_tag :name_in_one_column, options_for_select([['True', 'true'], ['False', 'false']]), include_blank: 'Are the names in one column?', required: true, class: 'form-control' %>
+        </div>
         <%= submit_tag "Add Players", class: "btn btn-primary" %>
       <% end %>
     <% end %>
