--- a/app/views/leagues/_draft_types_modal.html.erb
+++ b/app/views/leagues/_draft_types_modal.html.erb
@@ -20,6 +20,10 @@
         <p>
           Rather than drafting players or cards, you pick the winner of a given match. The player who picks the most winners, well, wins!
         </p>
+        <h5>Bracket</h5>
+        <p>
+          A bracket league allows you to pick the winners of every match in a single-elimination tournament, all the way to the finals!
+        </p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
