--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -208,6 +208,10 @@
         <p>
           Rather than drafting players or cards, you pick the winner of a given match. The player who picks the most winners, well, wins!
         </p>
+        <h5>Bracket</h5>
+        <p>
+          A bracket league allows you to pick the winners of every match in a single-elimination tournament, all the way to the finals!
+        </p>
       </div>
     <% elsif @competition.end_date ?  (Time.now > @competition.end_date) : (Time.now - 4.days > @competition.start_date)  %>
       <h2> This competition has ended!</h2>
