added custom redirect

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -107,7 +107,7 @@
               </div>
               <div class="event-container">
                 <a href="/games/mtg/competitions/" class="homepage-event-link">
-                  <p class="event-button">"Spark" Madness (Mar 20-Apr 24)</p>
+                  <p class="event-button">Spark Madness (Mar 21-Apr 4)</p>
                 </a>
               </div>
               <div class="event-container">
