--- a/app/views/leagues/_pick_em_info.html.erb
+++ b/app/views/leagues/_pick_em_info.html.erb
@@ -5,8 +5,8 @@
       <% if current_user && current_user.leagues.include?(@league) %>
         <% if current_user.team(@league)&.submitted %>
           <%= link_to 'View Team', game_competition_league_team_path(@game, @competition, @league, current_user.team(@league)), class: 'btn btn-dark' %>
-        <% else %>
-          <%= link_to 'Draft Now', game_competition_league_draft_path(@game, @competition, @league, @league.draft), class: 'btn btn-success' %>
+        <% elsif @league.leagueable.start_date > Time.now %>
+          <%= link_to 'Pick Now', game_competition_league_draft_path(@game, @competition, @league, @league.draft), class: 'btn btn-success' %>
         <% end %>
       <% else %>
         <%= link_to 'Join Now!', game_competition_league_join_path(@game, @competition, @league), class: 'btn btn-primary' if @league.leagueable.start_date > Time.now%>
