--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -48,7 +48,7 @@
       Powered by Hipsters of the Coast &copy; <%= Date.today.year %>.
     </p>
     <p>
-      Magic: the Gathering is a copyright of Wizards of the Coast.
+      Magic: the Gathering and the Magic Pro League are copyrights of Wizards of the Coast.
     </p>
   </div>
 </footer>
