--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "react-table";
 @import "stripe";
 @import "bracket";
+@import "pagination";
 
 @font-face {
     font-family: 'marvin_visions';
@@ -30,7 +31,7 @@ html {
     font-weight: 300;
     min-height: 100%;
     position: relative;
-    padding-bottom: 495px;
+    padding-bottom: 550px;
     background: $white;
     #content {
       margin: 0;
@@ -154,6 +155,14 @@ table {
 
 .table-outer-border {
   border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+@media (min-width: 400px) {
+  html {
+    body {
+      padding-bottom: 528px;
+    }
+  }
 }
 
 @media (min-width: 576px) {
