--- a/app/views/leagues/_pick_em.html.erb
+++ b/app/views/leagues/_pick_em.html.erb
@@ -17,13 +17,13 @@
       </tr>
     </thead>
     <tbody>
-      <% @league.standings.each_with_index do |team, index| %>
+      <% @teams.each_with_index do |team, index| %>
       <tr id="<%= team.points %>">
         <td>
-          <%= index + 1 %>
+          <%= index + ((@pagy.page - 1) * @pagy.items) + 1 %>
         </td>
         <td>
-          <%= link_to team.name, game_competition_league_team_path(team.league.leagueable.game, team.league, team.league, team) %>
+          <%= link_to team.name, game_competition_league_team_path(@game, @competition, @league, team) %>
         </td>
         <td>
           <%= team.points %>
@@ -32,6 +32,7 @@
       <% end %>
     </tbody>
   </table>
+  <%== pagy_bootstrap_nav(@pagy).html_safe %>
 <!-- If the draft hasn't been completed -->
 <% else %>
   <% if @league.public %>
